Fix layout problem in IE and clean code.

--- a/src/_h5ai/client/css/inc/info.less
+++ b/src/_h5ai/client/css/inc/info.less
@@ -13,17 +13,20 @@
     width: 240px;
 
     .icon {
-        .rounded();
         width: 240px;
         height: 180px;
-        overflow: hidden;
-        margin: 0 auto;
 
         img {
             .rounded();
-            width: 240px;
-            max-height: 180px;
+            display: block;
             overflow: hidden;
+            margin: 0 auto;
+            width: 180px;
+            height: 180px;
+        }
+
+        .thumb {
+            width: 240px;
         }
     }
 
